# universal-automation-platform

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  DEPLOYMENT_GUIDE.md  Dockerfile  LICENSE  QUALITY_ANALYSIS_REPORT.md  README.md  UPDATED_QUALITY_ANALYSIS_REPORT.md  app.py  app_english.py  app_sap.py  classification_for_ppt.json  enhanced_classifier.py  german_corporate_powerpoint.py  presentation_content.json  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  sample_classification.json  sap_powerpoint_generator.py  setup.cfg  system_design_document.md  test_corporate_presentation.pptx  test_data.csv  test_powerpoint.py  test_workflow_structure.py  universal_content_engine.py
.github/workflows/: ci.yml  deploy.yml  release.yml  security.yml
Tier0/: advanced_ai_analytics.py  app.py  app_english.py  app_original.py  integration_test.py
deploy/production/: task-definition.json
deploy/staging/: task-definition.json
docs/: system_design_document.md  technical_architecture_diagram.md
examples/: README.md
examples/sample_data/: sample_customer_data.csv  sample_employee_data.csv
scripts/: check_metrics.py
src/: __init__.py  enhanced_classifier.py  sap_powerpoint_generator.py  universal_content_engine.py
tests/: test_classifier.py
tests/acceptance/: test_production.py
tests/smoke/: test_smoke.py
