[metadata]
name = universal-automation-platform
version = 1.0.0
description = AI-powered data classification and presentation automation
long_description = file: README.md
long_description_content_type = text/markdown
author = AI Automation Platform Team
author_email = team@ai-automation-platform.com
url = https://github.com/djwilson20/universal-automation-platform
project_urls =
    Bug Tracker = https://github.com/djwilson20/universal-automation-platform/issues
    Documentation = https://ai-automation-platform.readthedocs.io
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13

[options]
packages = find:
package_dir =
    = src
python_requires = >=3.11
install_requires =
    pandas>=2.0.0
    numpy>=1.24.0
    python-pptx>=0.6.21
    openpyxl>=3.1.0

[options.packages.find]
where = src

[flake8]
max-line-length = 127
extend-ignore = E203, W503, E501
exclude =
    .git,
    __pycache__,
    .pytest_cache,
    .coverage,
    htmlcov,
    dist,
    build,
    .venv,
    venv

[isort]
profile = black
multi_line_output = 3
line_length = 127
known_first_party = src
known_third_party = pandas,numpy,pptx,openpyxl

[mypy]
python_version = 3.11
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
check_untyped_defs = True
disallow_untyped_decorators = True
no_implicit_optional = True
warn_redundant_casts = True
warn_unused_ignores = True
warn_no_return = True
warn_unreachable = True
ignore_missing_imports = True

[bandit]
exclude_dirs = tests,venv,.venv
skips = B101,B601